change links to tutorials

--- a/README.textile
+++ b/README.textile
@@ -7,7 +7,7 @@ Rails 3.2 example application with recurring billing using Stripe. Use for a Rai
 * "Twitter Bootstrap":http://twitter.github.com/bootstrap/ front-end framework for CSS styling
 * "Stripe":https://stripe.com/ for recurring billing and subscription management
 
-Best of all, there's a "detailed tutorial":http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html to show how it's built.
+Best of all, there's a "detailed tutorial":https://tutorials.railsapps.org/rails-stripe-membership-saas to show how it's built.
 
 You can build this application in only a few minutes using the "Rails Composer":http://railsapps.github.com/rails-composer/ tool.
 
@@ -21,7 +21,7 @@ h2. Tutorial
 
 A complete tutorial is available:
 
-h4. "View the Tutorial":http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html
+h4. "View the Tutorial":https://tutorials.railsapps.org/rails-stripe-membership-saas
 
 The tutorial documents each step to follow to create the application. Every step is documented concisely, so a complete beginner can create this application without any additional knowledge. However, no explanation is offered for any of the steps, so if you are a beginner, you’re advised to look for an introduction to Rails elsewhere. See a list of recommended resources for "Rails":http://railsapps.github.com/rails.html.
 
@@ -521,7 +521,7 @@ Problems? Check the "issues":https://github.com/RailsApps/rails-stripe-membershi
 
 h2. Documentation
 
-The "tutorial":http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html provides additional documentation.
+The "tutorial":https://tutorials.railsapps.org/rails-stripe-membership-saas provides additional documentation.
 
 h2. Issues
 
